--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/stack": "^7.3.2",
     "expo": "^53.0.9",
     "expo-font": "~13.3.1",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "^0.28.13",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-paper": "^5.14.4",
