--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-paper": "^5.14.4",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-reanimated": "~3.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
