--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-updates": "^0.28.13",
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
+    "lottie-react-native": "7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-paper": "^5.14.5",
@@ -35,8 +36,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1",
-    "lottie-react-native": "7.2.2"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
